[package]
name = "libglide"
version = "0.1.0"
authors = [
	"pyke.io",
	"Nicolas Bigaouette <nbigaouette@gmail.com>",
    "Luca Palmieri <rust@lpalmieri.com>",
    "Lorenz Schmidt <bytesnake@mailbox.org>",
    "Paul Körbitz <koerbitz@google.com>"
]
description = "Neural network utilities"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/allie-project/libglide"
readme = "README.md"
keywords = [ "machine-learning", "ai", "ml" ]
categories = [ "algorithms", "mathematics", "science" ]
exclude = [ ".github/", ".vscode/", "test/" ]

[lib]
crate-type = [ "lib", "dylib" ]
name = "glide"

[features]
default = [ "half", "onnx-fetch-models", "copy-dylibs" ]

netlib-static = [ "blas", "blas-src/netlib", "netlib-src/static" ]
netlib-system = [ "blas", "blas-src/netlib", "netlib-src/system" ]

openblas-static = [ "blas", "blas-src/openblas", "openblas-src/static" ]
openblas-system = [ "blas", "blas-src/openblas", "openblas-src/system" ]

intel-mkl-static = [ "blas", "blas-src/intel-mkl", "intel-mkl-src" ]
intel-mkl-system = [ "blas", "blas-src/intel-mkl", "intel-mkl-src/use-shared" ]

blis-static = [ "blas", "blas-src/blis", "blis-src/static" ]
blis-system = [ "blas", "blas-src/blis", "blis-src/system" ]

accelerate = [ "blas", "blas-src/accelerate", "accelerate-src" ]

blas = [ "ndarray/blas", "blas-src" ]
serde = [ "serde_crate", "ndarray/serde" ]

use-half-intrinsics = [ "half/use-intrinsics" ]
onnx-fetch-models = [ "ureq" ]
generate-bindings = [ "bindgen" ]
# used to prevent issues with docs.rs
disable-sys-build-script = []
copy-dylibs = []

# ONNX compile flags
prefer-compile = []
minimal-build = []
enable-training = []
ms-experimental = []
use-mimalloc = []
crt-static = []
compile-static = [ "crt-static" ]

cuda = []
dnnl = []
coreml = []
openvino = []
openmp = []
vitis-ai = []
tvm = []
tensorrt = []
migraphx = []
directml = []
winml = []
acl = []
armnn = []
rocm = []

[package.metadata.docs.rs]
features = [ "disable-sys-build-script", "onnx-fetch-models", "half" ]

[dependencies]
# core
ndarray = { version = "0.15", features = [ "approx-0_5", "rayon" ] }
num-complex = "0.4"
num-traits = "0.2"
rayon = "1.5"
approx = { version = "0.5", features = [ "num-complex" ] }
ndrustfft = "0.3"

# blas
blas-src = { version = "0.8", default-features = false, optional = true }
openblas-src = { version = "0.10", optional = true }
blis-src = { version = "0.2", default-features = false, features = [ "openmp", "cblas" ], optional = true }
netlib-src = { version = "0.8", optional = true }
accelerate-src = { version = "0.3", optional = true }
intel-mkl-src = { version = "0.5", optional = true }

# onnx
rand = { version = "0.8", features = [ "small_rng" ] }
ndarray-linalg = { version = "0.14", optional = true }
thiserror = "1.0"
anyhow = { version = "1.0" }
ureq = { version = "2.1", optional = true }
lazy_static = "1.4"
tracing = "0.1"
half = { optional = true, version = "1.8" }

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = [ "std", "derive" ]

[dev-dependencies]
ureq = "2.1"
image = "0.24"
test-log = { version = "0.2", default-features = false, features = [ "trace" ] }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
ndarray-npy = { version = "0.8", features = [ "num-complex-0_4", "compressed_npz" ] }
ndarray-rand = "0.14"
libglide-datasets = { path = "datasets", features = [ "winequality", "iris", "diabetes" ] }

[build-dependencies]
bindgen = { version = "0.59", optional = true }
ureq = "2.1"
zip = { version = "0.6", default-features = false, features = [ "deflate" ] }

[target.'cfg(not(target_os = "windows"))'.build-dependencies]
flate2 = "1.0"
tar = "0.4"

[target.'cfg(target_os = "windows")'.build-dependencies]
vswhom = "0.1"

[workspace]
members = [ "datasets" ]

[profile.release]
opt-level = 3
