[package]
name = "libglide"
version = "0.1.0"
authors = [
	"pyke.io",
	"Nicolas Bigaouette <nbigaouette@gmail.com>",
    "Luca Palmieri <rust@lpalmieri.com>",
    "Lorenz Schmidt <bytesnake@mailbox.org>",
    "Paul Körbitz <koerbitz@google.com>"
]
description = "Neural network utilities"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/allie-project/libglide"
readme = "README.md"
keywords = [ "machine-learning", "ai", "ml" ]
categories = [ "algorithms", "mathematics", "science" ]
exclude = [ ".github/", ".vscode/", "test/" ]

[lib]
crate-type = [ "lib", "dylib" ]
name = "glide"

[features]
default = [ "all-modules", "half", "onnx-fetch-models", "onnx-copy-dylibs", "linalg-pure" ]
use-half-intrinsics = [ "half/use-intrinsics" ]
# used to prevent issues with docs.rs
disable-build-script = []

# modules
onnx = [ "tracing", "lazy_static" ]
logistic = []
all-modules = [ "onnx", "logistic" ]

blas-netlib-static = [ "linalg-blas", "blas-src/netlib", "netlib-src/static" ]
blas-netlib = [ "linalg-blas", "blas-src/netlib", "netlib-src/system" ]

blas-openblas-static = [ "linalg-blas", "blas-src/openblas", "openblas-src/static" ]
blas-openblas = [ "linalg-blas", "blas-src/openblas", "openblas-src/system" ]

blas-intel-mkl-static = [ "linalg-blas", "blas-src/intel-mkl", "intel-mkl-src" ]
blas-intel-mkl = [ "linalg-blas", "blas-src/intel-mkl", "intel-mkl-src/use-shared" ]

blas-blis-static = [ "linalg-blas", "blas-src/blis", "blis-src/static" ]
blas-blis = [ "linalg-blas", "blas-src/blis", "blis-src/system" ]

blas-accelerate = [ "linalg-blas", "blas-src/accelerate", "accelerate-src" ]

linalg-blas = [ "ndarray/blas", "blas-src", "ndarray-linalg", "_linalg" ]
linalg-pure = [ "ndarray-linalg-rs", "_linalg" ]

_linalg = [ "argmin" ]

onnx-fetch-models = [ "ureq" ]
onnx-generate-bindings = [ "bindgen" ]
onnx-copy-dylibs = []

# ONNX compile flags
onnx-prefer-compile-strategy = []
onnx-prefer-system-strategy = []
onnx-prefer-dynamic-libs = []
onnx-minimal-build = []
onnx-training = []
onnx-experimental = []
onnx-mimalloc = []
onnx-compile-static = []

onnxep-cuda = []
onnxep-dnnl = []
onnxep-coreml = []
onnxep-openvino = []
onnxep-openmp = []
onnxep-vitis-ai = []
onnxep-tvm = []
onnxep-tensorrt = []
onnxep-migraphx = []
onnxep-directml = []
onnxep-winml = []
onnxep-acl = []
onnxep-armnn = []
onnxep-rocm = []

[package.metadata.docs.rs]
features = [ "disable-build-script", "onnx-fetch-models", "half", "linalg-pure" ]

[dependencies]
# core
thiserror = "1.0"
anyhow = "1.0"
ndarray = { version = "0.15", features = [ "approx-0_5", "rayon", "serde" ] }
ndarray-stats = "0.5"
num-complex = "0.4"
num-traits = "0.2"
rayon = "1.5"
approx = { version = "0.5", features = [ "num-complex" ] }
rand = { version = "0.8", features = [ "small_rng" ] }
serde = { version = "1.0", default-features = false, features = [ "std", "derive" ] }
ndrustfft = "0.3"
argmin = { version = "0.5", features = [ "ndarray", "ndarray-rand" ], optional = true }
ndarray-linalg = { version = "0.14", optional = true }
ndarray-linalg-rs = { git = "https://github.com/rust-ml/ndarray-linalg-rs.git", optional = true }

# blas
blas-src = { version = "0.8", default-features = false, optional = true }
openblas-src = { version = "0.10", optional = true, features = [ "cblas" ] }
blis-src = { version = "0.2", default-features = false, features = [ "openmp", "cblas" ], optional = true }
netlib-src = { version = "0.8", optional = true }
accelerate-src = { version = "0.3", optional = true }
intel-mkl-src = { version = "0.5", optional = true }

# onnx
ureq = { version = "2.1", optional = true }
lazy_static = { version = "1.4", optional = true }
tracing = { version = "0.1", optional = true }
half = { version = "1.8", optional = true }

[dev-dependencies]
ureq = "2.1"
image = "0.24"
test-log = { version = "0.2", default-features = false, features = [ "trace" ] }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
ndarray-npy = { version = "0.8", features = [ "num-complex-0_4", "compressed_npz" ] }
ndarray-rand = "0.14"
libglide-datasets = { path = "datasets", features = [ "winequality", "iris", "diabetes" ] }

[build-dependencies]
bindgen = { version = "0.59", optional = true }
ureq = "2.1"
zip = { version = "0.6", default-features = false, features = [ "deflate" ] }

[target.'cfg(not(target_os = "windows"))'.build-dependencies]
flate2 = "1.0"
tar = "0.4"

[target.'cfg(target_os = "windows")'.build-dependencies]
vswhom = "0.1"

[workspace]
members = [ "datasets" ]

[profile.release]
opt-level = 3
