[package]
name = "ml2"
description = "AI Utilities"
version = "1.0.0-dev.20220511"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/allie-project/ml2"
readme = "README.md"
keywords = [ "machine-learning", "ai", "ml" ]
categories = [ "algorithms", "mathematics", "science" ]
authors = [
	"pyke.io",
	"Nicolas Bigaouette <nbigaouette@gmail.com>",
    "Luca Palmieri <rust@lpalmieri.com>",
    "Lorenz Schmidt <bytesnake@mailbox.org>",
    "Paul Körbitz <koerbitz@google.com>"
]
exclude = [ ".github/", ".vscode/", "tests/" ]

[workspace]
members = [ "datasets" ]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[package.metadata.docs.rs]
features = [ "all-modules", "half", "onnx-fetch-models", "onnx-copy-dylibs", "linalg-pure" ]

[features]
default = [ "all-modules", "half", "onnx-fetch-models", "onnx-copy-dylibs", "linalg-pure" ]
use-half-intrinsics = [ "half/use-intrinsics" ]
# used to prevent issues with docs.rs
disable-build-script = []
serde = [ "serde_crate", "ndarray/serde" ]

# modules
onnx = [ "tracing", "lazy_static" ]
bayes = [ "ndarray-stats" ]
logistic = [ "ndarray-stats", "argmin", "serde_crate" ]
nn = [ "ndarray-stats", "noisy_float", "order-stat", "kdtree" ]
kernel = [ "nn", "sprs" ]
all-modules = [ "onnx", "bayes", "logistic", "nn", "kernel" ]

blas-netlib-static = [ "linalg-blas", "blas-src/netlib", "netlib-src/static" ]
blas-netlib = [ "linalg-blas", "blas-src/netlib", "netlib-src/system" ]

blas-openblas-static = [ "linalg-blas", "blas-src/openblas", "openblas-src/static" ]
blas-openblas = [ "linalg-blas", "blas-src/openblas", "openblas-src/system" ]

blas-intel-mkl-static = [ "linalg-blas", "blas-src/intel-mkl", "intel-mkl-src" ]
blas-intel-mkl = [ "linalg-blas", "blas-src/intel-mkl", "intel-mkl-src/use-shared" ]

blas-blis-static = [ "linalg-blas", "blis-src/static" ]
blas-blis = [ "linalg-blas", "blis-src/system" ]

blas-accelerate = [ "linalg-blas", "blas-src/accelerate", "accelerate-src" ]

linalg-blas = [ "ndarray/blas", "blas-src", "ndarray-linalg", "_linalg" ]
linalg-pure = [ "linfa-linalg", "_linalg" ]
_linalg = [ "argmin" ]

onnx-fetch-models = [ "ureq" ]
onnx-generate-bindings = [ "bindgen" ]
onnx-copy-dylibs = []

# ONNX compile flags
onnx-prefer-compile-strategy = []
onnx-prefer-system-strategy = []
onnx-prefer-dynamic-libs = []
onnx-minimal-build = []
onnx-training = []
onnx-experimental = []
onnx-mimalloc = []
onnx-compile-static = []

onnxep-cuda = []
onnxep-dnnl = []
onnxep-coreml = []
onnxep-openvino = []
onnxep-openmp = []
onnxep-vitis-ai = []
onnxep-tvm = []
onnxep-tensorrt = []
onnxep-migraphx = []
onnxep-directml = []
onnxep-winml = []
onnxep-acl = []
onnxep-armnn = []
onnxep-rocm = []

[dependencies]
serde_crate = { package = "serde", version = "1.0", default-features = false, features = [ "std", "derive" ], optional = true }
ndarray = { version = "0.15", features = [ "approx-0_5" ] }
ndarray-linalg = { version = "0.14", optional = true }
linfa-linalg = { version = "0.1", optional = true }
approx = { version = "0.5", features = [ "num-complex" ] }
num-complex = "0.4"
num-traits = "0.2"
rayon = "1.5"
thiserror = "1.0"
rand = { version = "0.8", features = [ "small_rng" ] }

# nn
noisy_float = { version = "0.2", optional = true }
order-stat = { version = "0.1", optional = true }
kdtree = { version = "0.6", optional = true }

# bayes, nn
ndarray-stats = { version = "0.5", optional = true }

# audio
ndrustfft = "0.3"

# logistic
argmin = { version = "0.5", default-features = false, features = [ "ndarray", "ndarray-rand" ], optional = true }

# kernel
sprs = { version = "0.11", default-features = false, optional = true }

# blas
blas-src = { version = "0.8", default-features = false, optional = true }
blis-src = { version = "0.2", default-features = false, features = [ "openmp", "cblas" ], optional = true }
openblas-src = { version = "0.10", optional = true, features = [ "cblas" ] }
accelerate-src = { version = "0.3", optional = true }
netlib-src = { version = "0.8", optional = true }
intel-mkl-src = { version = "0.5", optional = true }

# onnx
ureq = { version = "2.1", optional = true }
lazy_static = { version = "1.4", optional = true }
tracing = { version = "0.1", optional = true }
half = { version = "1.8", optional = true }

[dev-dependencies]
ureq = "2.1"
image = "0.24"
test-log = { version = "0.2", default-features = false, features = [ "trace" ] }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
ndarray-npy = { version = "0.8", features = [ "num-complex-0_4", "compressed_npz" ] }
ndarray-rand = "0.14"
ml2-datasets = { path = "datasets", features = [ "winequality", "iris", "diabetes" ] }
rand_xoshiro = "0.6"
criterion = { version = "0.3", features = [ "html_reports" ] }

[build-dependencies]
bindgen = { version = "0.59", optional = true }
ureq = "2.1"
zip = { version = "0.6", default-features = false, features = [ "deflate" ] }

[target.'cfg(not(target_os = "windows"))'.build-dependencies]
flate2 = "1.0"
tar = "0.4"

[target.'cfg(target_os = "windows")'.build-dependencies]
vswhom = "0.1"

[[bench]]
name = "nn"
required-features = [ "nn" ]
harness = false
