[package]
name = "libglide-datasets"
version = "0.5.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
description = "Collection of small datasets for Linfa"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-ml/linfa"

[dependencies]
libglide = { path = ".." }
ndarray = { version = "0.15", features = [ "approx-0_5" ] }
ndarray-csv = "=0.5.1"
csv = "1.1"
flate2 = "1.0"
ndarray-rand = { version = "0.14", optional = true }

[dev-dependencies]
approx = "0.5"

[features]
default = []
diabetes = []
iris = []
winequality = []
linnerud = []
generate = ["ndarray-rand"]
